simulation: cmake: CMakeLists for deps/json_spirit.
Unfortunately, I can't put it directly in deps/json_spirit because that is a submodule. submodules be cursed.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "chef"]
 	path = chef
 	url = https://github.com/databus23/football-worldcup-simulator-chef.git
+[submodule "simulation/json-spirit"]
+	path = simulation/json-spirit
+	url = https://github.com/sirikata/json-spirit.git
